--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -1,10 +1,14 @@
 .main-welcome {
     margin-top: 30px;
+    color: rgb(36, 30, 23);
+    background-color: rgb(215, 206, 221);
   }
   
   .title {
     text-align: center;
     font-weight: lighter;
+    font-size: xx-large;
+    font-style: italic;
   }
   
   .subtitle {
