--- a/src/app/pages/signin/signin.component.html
+++ b/src/app/pages/signin/signin.component.html
@@ -1,31 +1,39 @@
 <div fxLayout="column">
-    <div fxFlex *ngIf="error">
-        {{ error }}
-    </div>
 
-    <mat-card>
-        <mat-card-title>
-            Employee Sign-in Page
+  <mat-card fxFlex class="signin-container mat-elevation-z8">
 
-        </mat-card-title>
-        <mat-card-subtitle>
-            You must enter a valid employeeID to proceed
-        </mat-card-subtitle>
+    <mat-card-title class="signin-title mat-headline">Employee Sign-in</mat-card-title><br />
 
-        <form [formGroup]="form" (ngSubmit)="login(); form.reset();">
-            <mat-card-content>
-                <mat-form-field>
-                    <input matInput
-                    [formControl]="form.controls['empId']"
-                    placeholder="Employee Id" />
-                </mat-form-field>
+    <mat-card-subtitle class="signin-subtitle mat-headline">You must enter a valid employee id to proceed
+    </mat-card-subtitle>
 
-            </mat-card-content>
-            <mat-card-actions algin="end">
-                <button type="submit" fxFlex mat-raised-button color="primary" [disabled]="!form.valid">Sign-in</button>
-    
-            </mat-card-actions>
+    <mat-card-content>
+
+      <mat-card class="mat-elevation-z0" fxLayout="column" fxLayoutGap="10px">
+        <form [formGroup]="form" (ngSubmit)="login(); form.reset()" #loginForm="ngForm">
+
+          <mat-card-content>
+            <mat-form-field fxFlex>
+
+              <input matInput [formControl]="form.controls['empId']" placeholder="Employee ID" />
+
+               <mat-error *ngIf="form.controls['empId'].hasError('required') && form.controls['empId'].touched">
+                Employee ID is a required field.
+              </mat-error>
+
+              <mat-error *ngIf="form.controls['empId'].hasError('pattern') && form.controls['empId'].touched">
+                Employee ID must be a numerical value.
+              </mat-error>
+
+            </mat-form-field>
+          </mat-card-content>
+
+          <mat-card-actions>
+            <button type="submit" fxFlex mat-raised-button [disabled]="!form.valid" color="primary" >Submit</button>
+          </mat-card-actions>
+
         </form>
-       
-    </mat-card>
+      </mat-card>
+    </mat-card-content>
+  </mat-card>
 </div>
