--- a/src/app/shared/base-layout/base-layout.component.css
+++ b/src/app/shared/base-layout/base-layout.component.css
@@ -1,7 +1,7 @@
 .logo {
     margin-left: 75px;
     font-size: 24px;
-    font-weight: lighter;;
+    font-weight: lighter;
   }
   
   .navbar-container {
