--- a/src/app/shared/base-layout/base-layout.component.css
+++ b/src/app/shared/base-layout/base-layout.component.css
@@ -6,15 +6,19 @@
   
   .navbar-container {
     padding: 5px;
+    
   }
   
   .navbar-link {
     font-size: 24px;
     font-weight: lighter;
+    color: black;
+    
   }
   
   .main-content {
     padding-left: 30px;
+    
   }
   
   .footer {
@@ -28,6 +32,7 @@
     font-weight: lighter;
     padding-left: 100px;
     letter-spacing: 3px;
+    
   }
   
   .bu-link {
