--- a/src/app/shared/base-layout/base-layout.component.html
+++ b/src/app/shared/base-layout/base-layout.component.html
@@ -1,27 +1,33 @@
-<div fxLayout="column">
-
-    <!-- navigation -->
+  <div fxLayout="column">
+  <!-- navigation -->
     <nav fxFlex>
-      <mat-toolbar>
+      <mat-toolbar color="primary">
         <!-- navbar container -->
         <div class="navbar-container">
           <!-- logo -->
           <button class="logo" routerLink="/" mat-button>nodebucket</button>
-  
+
           <button class="navbar-link" routerLink="/" mat-button>Home</button>
           <button class="navbar-link" mat-button>About</button>
+          <button
+            class="navbar-link"
+            mat-button
+            (click)="signOut()"
+          >
+            Sign Out
+          </button>
         </div>
-  
+
       </mat-toolbar>
     </nav>
-  
+
     <!-- main content -->
     <div fxFlex>
       <main class="main-content" fxFlex="100%;">
         <router-outlet></router-outlet>
       </main>
     </div>
-  
+
     <!-- footer -->
     <div fxFlex>
       <footer class="footer">
@@ -32,6 +38,5 @@
         </mat-toolbar>
       </footer>
     </div>
-  
+
   </div>
-  
