--- a/src/app/pages/not-found/not-found.component.html
+++ b/src/app/pages/not-found/not-found.component.html
@@ -1,1 +1,20 @@
-<h1>404 - Resource not found </h1>
+<div fxLayout="column" fxLayoutAlign="center center" class="main-container">
+    <div fxFlex="15" class="nav-container">
+      <nav>
+        
+          <!-- navbar container -->
+          <div class="navbar-container" fxFlex>
+            <!-- logo -->
+              <img class="logo" routerLink="/" src="../../../assets/404dog.png" height="850px" />
+              </div>
+              
+              </nav>
+              </div>
+              
+              <div fxFlex fxFlexAlign="center center">
+                <div>
+                <button mat-raised-button color="accent" routerLink="/">Return home</button>
+                </div>
+              </div>
+            
+            
